# LearnOpenGL

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
src/: colors.hpp  main.cpp
